# Creative_Researcher_Agent

./: .env  README.md  app.py  app_final.py  app_ultimate.py  gradio_app.py  prompts.py  pyproject.toml  research_agent.py  ultimate_research_agent.py
notebooks/: chatbot_summ_sqlite.ipynb  chatbot_with_summarization.ipynb  research_agent.ipynb  sqlite.db-shm  sqlite.db-wal
